<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ROS2_DEMO</name>
  <version>0.0.1</version>
  <description>Estimate running time</description>
  <maintainer email="egb3543@gmail.com">binlee0903</maintainer>
  <license>MIT</license>

  <!--  <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--  <build_depend>roscpp</build_depend> -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
